<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:stateListAnimator="@null"
        tools:ignore="UnusedAttribute">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:layout_marginEnd="@dimen/padding_horizontal"
                android:layout_marginTop="@dimen/padding_macro"
                android:layout_marginBottom="@dimen/padding_macro"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/receive"
                android:paddingTop="@dimen/padding_horizontal"
                android:paddingBottom="@dimen/padding_horizontal"
                android:paddingStart="@dimen/padding_zero"
                android:paddingEnd="@dimen/padding_horizontal"
                android:src="@drawable/ic_chevron_left"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        style="@style/WhiteTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_medium" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/padding_micro"
        android:layout_marginEnd="@dimen/padding_micro"
        android:background="@drawable/bg_bottom_sheet"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:layout_marginTop="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_horizontal"
                android:layout_marginBottom="@dimen/padding_mini"
                android:text="@string/recovery" />

            <TextView
                android:id="@+id/viewPhraseButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_phrase" />

            <TextView
                android:id="@+id/viewSeedButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_seed" />

            <TextView
                style="@style/SettingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:layout_marginTop="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_horizontal"
                android:layout_marginBottom="@dimen/padding_mini"
                android:text="@string/security" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pin_send_payments" />

                <Switch
                    android:id="@+id/pinOnSendPaymentsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_vertical_margin" />

            </LinearLayout>

            <TextView
                style="@style/SettingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:layout_marginTop="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_horizontal"
                android:layout_marginBottom="@dimen/padding_mini"
                android:text="@string/account" />

            <TextView
                android:id="@+id/editInfoButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information" />

            <TextView
                android:id="@+id/logOutButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

            <TextView
                style="@style/SettingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:layout_marginTop="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_horizontal"
                android:layout_marginBottom="@dimen/padding_mini"
                android:text="@string/support" />

            <TextView
                android:id="@+id/diagnosticButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bug_report" />

            <TextView
                android:id="@+id/supportEmailButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support_email" />

            <TextView
                android:id="@+id/supportWhatsAppButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support_whatsapp" />

            <TextView
                style="@style/SettingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:layout_marginTop="@dimen/padding_mini"
                android:layout_marginEnd="@dimen/padding_horizontal"
                android:layout_marginBottom="@dimen/padding_mini"
                android:text="@string/about" />

            <TextView
                android:id="@+id/quickStartButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quick_start" />


            <TextView
                android:id="@+id/termsOfServiceButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service" />

            <TextView
                android:id="@+id/appVersionText"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:layout_marginBottom="@dimen/padding_horizontal"
                android:textColor="@color/colorPaleSky" />

            <TextView
                android:id="@+id/debug"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_preferences" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
